objects/ProductConsumed.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Products Consumed</relationshipLabel>
        <relationshipName>Products_Consumed</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Asset__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Asset</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Products Consumed</relationshipLabel>
        <relationshipName>Products_Consumed</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Products Consumed</relationshipLabel>
        <relationshipName>Products_Consumed</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Consumed_Number__c</fullName>
        <description>Populated in the Log Parts Consumed FSM flow; used to match the Product Consumed with the related Product Request record.</description>
        <label>Product Consumed Number</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RMA_Number__c</fullName>
        <displayFormat>RMA-{000000}</displayFormat>
        <label>RMA Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>RMA_Status__c</fullName>
        <label>RMA Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>RMA Pulled</fullName>
                </value>
                <value>
                    <fullName>RMA Shipped</fullName>
                </value>
                <value>
                    <fullName>RMA Received</fullName>
                </value>
                <value>
                    <fullName>RMA Not Expected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Service_Appointment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Appointment</label>
        <referenceTo>ServiceAppointment</referenceTo>
        <relationshipLabel>Products Consumed</relationshipLabel>
        <relationshipName>Products_Consumed</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Source_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Where the Product Consumed was initially sourced from.</inlineHelpText>
        <label>Consumed From Location</label>
        <referenceTo>Location</referenceTo>
        <relationshipLabel>Products Consumed</relationshipLabel>
        <relationshipName>Products_Consumed</relationshipName>
        <type>Lookup</type>
    </fields>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>